--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 REACT_APP_LOCAL_PROXY=http://localhost:9000
+REACT_APP_ROUTE_MITRA_CHAT=/mitra-chat
+REACT_APP_ROUTE_LOGIN=/login
+REACT_APP_ROUTE_EXIT=/exit
+REACT_APP_ACCESS_TOKEN_KEY=accToken
