--- a/src/deployment/ansible.yml
+++ b/src/deployment/ansible.yml
@@ -23,8 +23,8 @@
         force: yes
 
     - name: set permission
-      shell: chmod 744 {{ current_path }}/src/scripts/json2env.sh  
-      
+      shell: chmod 744 {{ project_path }}/src/scripts/json2env.sh  
+
     - name: Fetch .env from Vault
       shell: >
         curl --location --request GET '{{ vaultAddress }}mitra-ai-env' 
