Work Update (Bug Fixes)

--- a/sample.env
+++ b/sample.env
@@ -4,3 +4,4 @@ REACT_APP_ROUTE_LOGIN=''
 REACT_APP_ROUTE_EXIT=''
 REACT_APP_ROUTE_HOME=''
 REACT_APP_ACCESS_TOKEN_KEY=''
+REACT_APP_ROUTE_EXPLORE=''
