--- a/sample.env
+++ b/sample.env
@@ -5,3 +5,5 @@ REACT_APP_ROUTE_EXIT=''
 REACT_APP_ROUTE_HOME=''
 REACT_APP_ACCESS_TOKEN_KEY=''
 REACT_APP_ROUTE_EXPLORE=''
+REACT_APP_WEBSOCKET_HOST=''
+REACT_APP_WEBSOCKET_RETRY_NUM=''
