--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.8",
+    "dompurify": "^3.1.7",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
+    "react-use": "^17.5.1",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
+    "wavesurfer.js": "^7.8.17",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
